--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=secret_key
-JWT_EXPIRES_IN=1d
-MONGO_URL = mongodb+srv://logavarshhnis2007_db_user:loga2007@cluster0.qcrxz6e.mongodb.net/studykit
+JWT_EXPIRES_IN=1h
+MONGO_URL=mongodb+srv://logavarshhnis2007_db_user:loga2007@cluster0.qcrxz6e.mongodb.net/studykit
